# databricks-ingestion-lakehouse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: index.html  pipeline_overview.qmd
notebooks/databricks/bronze/: 01_ingest_bronze_sql.py
notebooks/databricks/gold/: 03_trips_summary_sql.py
notebooks/databricks/silver/: 02_clean_tlc_trips_sql.py
notebooks/gold/: 03_trips_summary_sql.py
notebooks/local/bronze/: 01_ingest_tlc_trips.py
notebooks/local/gold/: 03_trips_summary.py
notebooks/local/silver/: 02_clean_tlc_trips.py
notebooks/silver/: 02_clean_tlc_trips_sql.py
reports/: pipeline_overview.qmd
scripts/: deploy_to_databricks.py  download_tlc_data.py  upload_to_dbfs.py  upload_to_volume.py
src/: paths.py  schema.py  spark_session.py
tests/: test_paths.py
